Wed Mar 19 13:47:47 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * docs/README:
        * modules/ProjectCreator.pm:

          Added the ability to use <%gendir%> in custom sections.  This
          variable will contain the 'gendir' setting if provided and '.' if
          it is not.

        * modules/TemplateParser.pm:

          Fixed a bug where the 'full_path' function would use the current
          directory if the value passed to it was a Windows style path.

        * templates/wb26wrproject.mpd:

          Added the 'full_path' usage back now that the function has been
          fixed.

Wed Mar 19 12:27:53 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * modules/ProjectCreator.pm:

          Fixed a bug where multiple projects within a single MPC file and a
          project type with multiple templates would cause problems due to
          project information being updated for each template.  The fix is
          to only update project info for the visible template.

        * modules/TemplateParser.pm:

          Modified the 'full_path' template function to allow relative paths
          to be converted to full paths even if they don't exist.  Relative
          paths are assumed to be relative from the current working
          directory (which is the directory of the MPC file).

        * modules/WorkspaceCreator.pm:

          Added a comment about the progress indicator.

Tue Mar 18 18:56:35 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * modules/ProjectCreator.pm:

          Modified to write out N files per MPC project.  Now, a file will
          be written out per template file associated with the project type.
          However, the workspace can only "know" about one project file
          (which is determined by the sub-classed project creator).

        * modules/WB26ProjectCreator.pm:
        * modules/WB26WorkspaceCreator.pm:

          Combined all of the functionality from WB26WR* into these modules.